update the utils